Made improvements to autopilot